# ya-runtime-sgx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: artifacts.yml  build-tar.yml  release.yml  rust.yaml
crates/trusted-voting-client/: Cargo.toml
crates/trusted-voting-client/src/: main.rs
crates/trusted-voting-mgr/: Cargo.toml  README.md
crates/trusted-voting-mgr/data/: .gitignore
crates/trusted-voting-mgr/src/: eth.rs  idenity.rs  main.rs  voting.rs
crates/trusted-voting-operator/: Cargo.toml
crates/trusted-voting-operator/src/: main.rs  market.rs  session.rs
crates/trusted-voting-operator/src/session/: manager.rs
crates/trustless-voting-client/: Cargo.toml
crates/trustless-voting-client/src/: main.rs
crates/trustless-voting-mgr/: Cargo.toml
crates/trustless-voting-mgr/.cargo/: config
crates/trustless-voting-mgr/data/: .gitignore
crates/trustless-voting-mgr/src/: eth.rs  main.rs  voting.rs
crates/trustless-voting-operator/: Cargo.toml  README.md  accounts.json
crates/trustless-voting-operator/src/: main.rs  market.rs  session.rs
crates/trustless-voting-operator/src/session/: manager.rs
crates/trustless-voting-operator/ui/: index.html
distro/: .gitignore  Makefile  exe-unit-wrapper.sh  exe-unit.Dockerfile  extract.sh  graphene.Dockerfile  sgx.h  ya-runtime-sgx.json  ya-runtime-wasi.Dockerfile
distro/yagna/: sgx-exe-unit.manifest  ya-runtime-sgx-wasi.manifest
graphene/: exe-unit-wrapper.sh  exe-unit.manifest  hello.c  hello.manifest  provider.json  requestor.json  ya-runtime-sgx.manifest  ya-runtime-wasi.manifest
src/: main.rs
ui/sgx-voting-app/: package.json
ui/sgx-voting-app/public/: index.html
ui/sgx-voting-app/src/: App.js  Manager.js  Nodes.jsx  SessionDetails.js  Sessions.jsx  Web3.js  index.css  setupProxy.js
ui/sgx-voting-app/src/modals/: NewVoting.js
