[package]
name = "ya-runtime-sgx"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
futures = "0.3"
log = "0.4"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["io-std", "io-util", "macros", "rt-threaded", "time"] }
ya-runtime-api= { version = "0.1", git = "https://github.com/golemfactory/yagna.git", features=["codec", "server"] }
