[package]
name = "trusted-voting-client"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.3.5"
structopt="0.3"
rand="0.7.3"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex="0.4.2"
